Changed scss for sass

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700" rel="stylesheet">
-    <!-- Production Stylesheet -->
-    <!-- <link rel="stylesheet" type="text/css" href="css/styles.production.css"> -->
-    <!-- Testing Stylesheet -->
-    <link rel="stylesheet" type="text/css" href="css/styles.test.css">
+    <link rel="stylesheet" type="text/css" href="build/styles.css">
 </head>
 
 <body>
