--- a/index.html
+++ b/index.html
@@ -1,45 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<title>Fool's Gambit Morris</title>
+		<link rel="shortcut icon" href="assets/logos/Fools-Logo_High-Res.png" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+			integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+			crossorigin="anonymous"
+		/>
+		<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="build/styles.css" />
+	</head>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Fool's Gambit Morris</title>
-    <link rel="shortcut icon" href="img/favicon-32x32.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="build/styles.css">
-</head>
+	<body>
+		<!-- Header -->
+		<header class="header">
+			<div class="socials header__item">
+				<div class="img-container">
+					<img src="assets/logos/Fools-Logo-Full.svg" alt="Facebook Logo" class="" />
+				</div>
+				<div class="img-container">
+					<img src="assets/logos/Fools-Logo-Full.svg" alt="Link Tree Logo" class="" />
+				</div>
+				<div class="img-container">
+					<img src="assets/logos/Fools-Logo-Full.svg" alt="Instagram Logo" class="" />
+				</div>
+			</div>
+			<div class="fools-logo img-container header__item">
+				<img src="assets/logos/Fools-Logo-Full.svg" alt="Logo" class="" />
+			</div>
+			<!-- Menu Bar -->
+			<nav class="header__item">
+				<ul role="menubar" class="navigation-list">
+					<li role="presentation">
+						<a
+							href="#Home"
+							role="menuitem"
+							class="navigation-list__item navigation-list__item--active"
+							>Home</a
+						>
+					</li>
+					<li role="presentation">
+						<a href="#about" role="menuitem" class="navigation-list__item">About</a>
+					</li>
+					<li>
+						<a href="#gallery" role="menuitem" class="navigation-list__item">Gallery</a>
+					</li>
+					<li role="presentation">
+						<a href="#contact" role="menuitem" class="navigation-list__item">Contact</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
 
-<body>
-    <!-- Header -->
-    <header class="page-header">
-        <img src="img/fools-logo.png" alt="Logo" class="page-header__item page-header__logo">
-        <!-- Menu Bar -->
-        <nav class="page-header__item">
-            <ul role="menubar" class="navigation-list">
-                <li role="presentation">
-                    <a href="#Home" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
-                </li>
-                <li role="presentation">
-                    <a href="#about" role="menuitem" class="navigation-list__item">About</a>
-                </li>
-                <li>
-                    <a href="#gallery" role="menuitem" class="navigation-list__item">Gallery</a>
-                </li>
-                <li role="presentation">
-                    <a href="#contact" role="menuitem" class="navigation-list__item">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Main Content -->
-    <main>
-
-    </main>
-</body>
-
+		<!-- Main Content -->
+		<main></main>
+	</body>
 </html>
