--- a/index.html
+++ b/index.html
@@ -33,30 +33,57 @@
 				<img src="assets/logos/Fools-Logo-Full.svg" alt="Logo" class="" />
 			</div>
 			<!-- Menu Bar -->
-			<nav class="header__item">
+			<nav class="header__item nav">
 				<ul role="menubar" class="navigation-list">
 					<li role="presentation">
 						<a
 							href="#Home"
 							role="menuitem"
 							class="navigation-list__item navigation-list__item--active"
-							>Home</a
+							>home</a
 						>
 					</li>
 					<li role="presentation">
-						<a href="#about" role="menuitem" class="navigation-list__item">About</a>
+						<a href="#about" role="menuitem" class="navigation-list__item">about</a>
 					</li>
 					<li>
-						<a href="#gallery" role="menuitem" class="navigation-list__item">Gallery</a>
+						<a href="#gallery" role="menuitem" class="navigation-list__item">gallery</a>
 					</li>
 					<li role="presentation">
-						<a href="#contact" role="menuitem" class="navigation-list__item">Contact</a>
+						<a href="#contact" role="menuitem" class="navigation-list__item">contact</a>
 					</li>
 				</ul>
 			</nav>
 		</header>
-
+		<div id="side-bars__left" class="side-bars"></div>
 		<!-- Main Content -->
-		<main></main>
+		<main>
+			<div class="home-section">
+				<h1>Fool's Gambit Morris</h1>
+				<p>Blurby stuff</p>
+			</div>
+			<div class="about-section">
+				<h2>Who We Are</h2>
+				<p>We are a team that does dancing and all that kinda stuff</p>
+				<h2>What We Do</h2>
+				<p>We still do dancing and stuff..</p>
+			</div>
+			<div class="gallery-section">
+				<p>There will be photos here</p>
+				<p>There will be photos here</p>
+				<p>There will be photos here</p>
+				<p>There will be photos here</p>
+				<p>There will be photos here</p>
+			</div>
+			<div class="contact-section">
+				<h2>Get In Touch</h2>
+				<p>There will be a form here</p>
+				<p>There will be a form here</p>
+				<p>There will be a form here</p>
+				<p>There will be a form here</p>
+				<p>There will be a form here</p>
+			</div>
+		</main>
+		<div id="side-bars__right" class="side-bars"></div>
 	</body>
 </html>
