Put actual social media logos on and link them

--- a/index.html
+++ b/index.html
@@ -20,15 +20,21 @@
 		<!-- Header -->
 		<header class="header">
 			<div class="socials header__item">
-				<div class="img-container">
-					<img src="assets/logos/Fools-Logo-Full.svg" alt="Facebook Logo" class="" />
-				</div>
-				<div class="img-container">
-					<img src="assets/logos/Fools-Logo-Full.svg" alt="Link Tree Logo" class="" />
-				</div>
-				<div class="img-container">
-					<img src="assets/logos/Fools-Logo-Full.svg" alt="Instagram Logo" class="" />
-				</div>
+			<!-- <div class="img-container"> -->
+			<a href="https://www.facebook.com/FoolsGambitMorris/" class="img-container img-link">
+				<img src="assets\logos\facebook-logo.svg" alt="Facebook Logo" class="" />
+			</a>
+			<!-- </div> -->
+			<!-- <div class="img-container"> -->
+			<a href="https://linktr.ee/foolsgambitmorris" class="img-container img-link">
+				<img src="assets\logos\linktree-logo.svg" alt="Link Tree Logo" class="" />
+			</a>
+			<!-- </div> -->
+			<!-- <div class="img-container"> -->
+			<a href="https://www.instagram.com/foolsgambitmorris/" class="img-container img-link">
+				<img src="assets\logos\instagram-logo.svg" alt="Instagram Logo" class="" />
+			</a>
+			<!-- </div> -->
 			</div>
 			<div class="fools-logo img-container header__item">
 				<img src="assets/logos/Fools-Logo-Full.svg" alt="Logo" class="" />
