--- a/index.html
+++ b/index.html
@@ -63,87 +63,94 @@
 	<main>
 		<section class="home-section" id="home">
 			<h1 class="home-section__title">Fool's Gambit Morris</h1>
-			<div class="home-section__text">
-				<p>
-					Fool's Gambit Morris is an young, energetic Cotswold morris team that aims to
-					amaze and impress with our dancing.<br>Dancing mainly in the Fieldtown, Raglan and Bledington
-					traditions, we enjoy performing at many events
-					far and wide.
-				</p>
-				<p>
-					I love cheese, especially stilton camembert de normandie. Rubber cheese caerphilly cheese and
-					biscuits
-					fromage frais red
-					leicester cheesecake croque monsieur taleggio. Jarlsberg cheesy grin rubber cheese say cheese
-					ricotta
-					stilton macaroni
-					cheese rubber cheese. Cheddar squirty cheese halloumi stilton cream cheese.
-				</p>
-				<p>
-					Cut the cheese stinking bishop cheese and biscuits. Croque monsieur when the cheese comes out
-					everybody's happy
-					jarlsberg cow babybel fondue paneer boursin. Port-salut edam cheese slices port-salut cheese
-					triangles
-					edam cow cheese
-					strings. Stinking bishop cheese and wine cheeseburger.
-				</p>
-			</div>
-			<div class="home-section__photo img-container" id="team-photo">
-				<img src="assets\img\team-photo_temp.jpg" alt="Team Photo" />
+			<div>
+				<div class="home-section__text">
+					<p>
+						Fool's Gambit Morris is an young, energetic Cotswold morris team that aims to
+						amaze and impress with our dancing.<br>Dancing mainly in the Fieldtown, Raglan and Bledington
+						traditions, we enjoy performing at many events
+						far and wide.
+					</p>
+					<p>
+						I love cheese, especially stilton camembert de normandie. Rubber cheese caerphilly cheese and
+						biscuits
+						fromage frais red
+						leicester cheesecake croque monsieur taleggio. Jarlsberg cheesy grin rubber cheese say cheese
+						ricotta
+						stilton macaroni
+						cheese rubber cheese. Cheddar squirty cheese halloumi stilton cream cheese.
+					</p>
+				</div>
+				<div class="home-section__photo img-container" id="team-photo">
+					<img src="assets\img\team-photo_temp.jpg" alt="Team Photo" />
+				</div>
 			</div>
 		</section>
 		<section class="about-section" id="about">
-			<h2 class="about-section__title" id="about-section__title--1">Who We Are</h2>
-			<div class="about-section__text" id="about-section__text--1">
-				<p>
-					Founded in 2010, we've been busy, being invited to many festivals including Shrewsbury, Sidmouth,
-					Whitby, Warwick and Bromyard, as well as attending many morris weekends of dance and other excellent
-					events.</p>
+			<h2 class="about-section__title" id="about-section__title-1">Who We Are</h2>
+			<div>
+				<div class="about-section__text" id="about-section__text-1">
+					<p>
+						Founded in 2010, we've been busy, being invited to many festivals including Shrewsbury,
+						Sidmouth,
+						Whitby, Warwick and Bromyard, as well as attending many morris weekends of dance and other
+						excellent
+						events.</p>
 
-				<p>I love cheese, especially cauliflower cheese say cheese. Cheesy feet brie boursin cheese and biscuits
-					pepper jack say cheese port-salut say cheese. Roquefort dolcelatte cottage cheese blue castello
-					roquefort emmental smelly cheese emmental. Cheesecake when the cheese comes out everybody's happy
-					cheese
-					strings pecorino caerphilly jarlsberg squirty cheese rubber cheese. Who moved my cheese.</p>
+					<p>I love cheese, especially cauliflower cheese say cheese. Cheesy feet brie boursin cheese and
+						biscuits
+						pepper jack say cheese port-salut say cheese. Roquefort dolcelatte cottage cheese blue castello
+						roquefort emmental smelly cheese emmental. Cheesecake when the cheese comes out everybody's
+						happy
+						cheese
+						strings pecorino caerphilly jarlsberg squirty cheese rubber cheese. Who moved my cheese.</p>
 
-				<p>Pecorino feta hard cheese. Boursin cheese triangles cut the cheese gouda stilton cheeseburger red
-					leicester red leicester. Fromage frais queso pecorino fromage cream cheese red leicester queso
-					port-salut. Roquefort.</p>
+					<p>Pecorino feta hard cheese. Boursin cheese triangles cut the cheese gouda stilton cheeseburger red
+						leicester red leicester. Fromage frais queso pecorino fromage cream cheese red leicester queso
+						port-salut. Roquefort.</p>
+				</div>
+				<div class="about-section__media img-container" id="about-section__media-1">
+					<iframe src="https://www.youtube.com/embed/bKW7XGUD2NY?si=zng7N6gy00jP-L8b&amp;controls=0"
+						title="Video" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+						allowfullscreen></iframe>
+				</div>
 			</div>
+			<h2 class="about-section__title" id="about-section__title-2">What We Do</h2>
+			<div>
+				<div class="about-section__text" id="about-section__text-2">
+					<p>I love cheese, especially the big cheese pecorino. Squirty cheese the big cheese the big cheese
+						pepper
+						jack squirty
+						cheese cheesy grin red leicester brie. Roquefort blue castello cheeseburger croque monsieur
+						melted
+						cheese fromage frais
+						chalk and cheese mozzarella. Cut the cheese.</p>
+					<p> Squirty cheese pepper jack edam. Monterey jack bocconcini cheese slices goat swiss cow boursin
+						cut
+						the
+						cheese.
+						Caerphilly danish fontina airedale red leicester the big cheese fromage frais smelly cheese
+						smelly
+						cheese. Cream cheese
+						feta halloumi mozzarella.</p>
 
-			<h2 class="about-section__title" id="about-section__title--2">What We Do</h2>
-			<div class="about-section__text" id="about-section__text--2">
-				<p>I love cheese, especially the big cheese pecorino. Squirty cheese the big cheese the big cheese
-					pepper
-					jack squirty
-					cheese cheesy grin red leicester brie. Roquefort blue castello cheeseburger croque monsieur melted
-					cheese fromage frais
-					chalk and cheese mozzarella. Cut the cheese.</p>
-				<p> Squirty cheese pepper jack edam. Monterey jack bocconcini cheese slices goat swiss cow boursin cut
-					the
-					cheese.
-					Caerphilly danish fontina airedale red leicester the big cheese fromage frais smelly cheese smelly
-					cheese. Cream cheese
-					feta halloumi mozzarella.</p>
-
-				<p>Camembert de normandie manchego cream cheese. Goat parmesan boursin say cheese caerphilly cottage
-					cheese
-					port-salut
-					stilton. Say cheese smelly cheese dolcelatte the big cheese manchego halloumi mascarpone danish
-					fontina.
-					Emmental cow
-					say cheese halloumi chalk and cheese cheese triangles chalk and cheese.</p>
-			</div>
-
-			<div class="about-section__media img-container">
-				<iframe width="560" height="315"
-					src="https://www.youtube.com/embed/bKW7XGUD2NY?si=zng7N6gy00jP-L8b&amp;controls=0" title="Video"
-					frameborder="0"
-					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-					allowfullscreen></iframe>
+					<p>Camembert de normandie manchego cream cheese. Goat parmesan boursin say cheese caerphilly cottage
+						cheese
+						port-salut
+						stilton. Say cheese smelly cheese dolcelatte the big cheese manchego halloumi mascarpone danish
+						fontina.
+						Emmental cow
+						say cheese halloumi chalk and cheese cheese triangles chalk and cheese.</p>
+				</div>
+				<div class="about-section__media img-container" id="about-section__media-2">
+					<iframe src="https://www.youtube.com/embed/bKW7XGUD2NY?si=zng7N6gy00jP-L8b&amp;controls=0"
+						title="Video" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+						allowfullscreen></iframe>
+				</div>
 			</div>
 		</section>
-
 
 		<section class="gallery-section" id="gallery">
 			<p>There will be photos here</p>
