--- a/index.html
+++ b/index.html
@@ -114,6 +114,21 @@
 							port-salut. Roquefort.</p>
 					</div>
 				</div>
+				<div class="polaroid">
+					<div class="polaroid__padding padding__top">
+
+					</div>
+					<div class="polaroid__padding padding__left">
+
+					</div>
+					<div class="polaroid__photo img-container">
+						<img src="assets\img\team-photo_temp.jpg" alt="Team Photo" />
+					</div>
+					<div class="polaroid__padding padding__right"></div>
+					<div class="polaroid__padding padding__bottom"></div>
+					<div class="polaroid__caption">
+						<p>A photo of the team in Evesham</p>
+					</div>
 				</div>
 				<div class="about-section__media img-container" id="about-section__media-1">
 					<iframe src="https://www.youtube.com/embed/bKW7XGUD2NY?si=zng7N6gy00jP-L8b&amp;controls=0"
