In process of doing caption stylings

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
 		rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="build/styles.css" />
 	<script src="source\scripts.js"></script>
 </head>
@@ -112,6 +113,14 @@
 							leicester red leicester. Fromage frais queso pecorino fromage cream cheese red leicester
 							queso
 							port-salut. Roquefort.</p>
+					</div>
+				</div>
+				<div class="polaroid">
+					<div class="polaroid__photo">
+						<img src="assets\img\team-photo_temp.jpg" alt="Team Photo" onload="correctPolaroid(this)" />
+					</div>
+					<div class="polaroid__caption">
+						<p>A photo of the team in Evesham</p>
 					</div>
 				</div>
 				<div class="polaroid">
