Polaroid non-responsive styling

--- a/index.html
+++ b/index.html
@@ -115,27 +115,35 @@
 							port-salut. Roquefort.</p>
 					</div>
 				</div>
-				<div class="polaroid">
-					<div class="polaroid__photo">
-						<img src="assets\img\team-photo_temp.jpg" alt="Team Photo" onload="correctPolaroid(this)" />
+
+				<div class="about-section__media" id="about-section__media-1">
+					<div class="polaroid">
+						<span class="polaroid__hover-target"></span>
+						<div class="polaroid__photo">
+							<img src="assets\img\team-photo_temp.jpg" alt="Team Photo" onload="correctPolaroid(this)" />
+						</div>
+						<div class="polaroid__caption">
+							<p>A photo of the team in Evesham</p>
+						</div>
 					</div>
-					<div class="polaroid__caption">
-						<p>A photo of the team in Evesham</p>
+					<div class="polaroid">
+						<span class="polaroid__hover-target"></span>
+						<div class="polaroid__photo">
+							<img src="assets\img\team-photo_temp.jpg" alt="Team Photo" onload="correctPolaroid(this)" />
+						</div>
+						<div class="polaroid__caption">
+							<p>A photo of the team in Evesham</p>
+						</div>
 					</div>
-				</div>
-				<div class="polaroid">
-					<div class="polaroid__photo">
-						<img src="assets\img\team-photo_temp.jpg" alt="Team Photo" onload="correctPolaroid(this)" />
+					<div class="polaroid">
+						<span class="polaroid__hover-target"></span>
+						<div class="polaroid__photo">
+							<img src="assets\img\team-photo_temp.jpg" alt="Team Photo" onload="correctPolaroid(this)" />
+						</div>
+						<div class="polaroid__caption">
+							<p>A photo of the team in Evesham</p>
+						</div>
 					</div>
-					<div class="polaroid__caption">
-						<p>A photo of the team in Evesham</p>
-					</div>
-				</div>
-				<div class="about-section__media img-container" id="about-section__media-1">
-					<iframe src="https://www.youtube.com/embed/bKW7XGUD2NY?si=zng7N6gy00jP-L8b&amp;controls=0"
-						style="aspect-ratio: 16/9;" title="Video" frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-						allowfullscreen></iframe>
 				</div>
 			</div>
 			<div>
