Added gallery to page - static image references atm

--- a/index.html
+++ b/index.html
@@ -189,11 +189,13 @@
 		</section>
 
 		<section class="gallery-section" id="gallery">
-			<p>There will be photos here</p>
-			<p>There will be photos here</p>
-			<p>There will be photos here</p>
-			<p>There will be photos here</p>
-			<p>There will be photos here</p>
+			<div class="gallery__carousel">
+				<ul class="carousel__slides">
+				</ul>
+				<button class="carousel__prev"></button>
+				<button class="carousel__next"></button>
+			</div>
+			<script>loadGallery()</script>
 		</section>
 		<section class="contact-section" id="contact">
 			<h2>Get In Touch</h2>
