Made gallery work with any image count and can scroll infinitely The scroll is kinda shit, was a workaround solution and stutters due to having to wait between individual scrolls. Will probably have to completely rework how the scroll works

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
 		<section class="gallery-section" id="gallery">
 			<div class="gallery__carousel">
-				<ul class="carousel__slides">
+				<ul class="carousel__slides" data-slide-width>
 				</ul>
 				<button class="carousel__prev"></button>
 				<button class="carousel__next"></button>
