Basic Slider Functionality Need to add elements for the nav and controls

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="build/styles.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
 	<script src="source\scripts.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 </head>
 
 <body>
@@ -190,10 +192,8 @@
 
 		<section class="gallery-section" id="gallery">
 			<div class="gallery__carousel">
-				<ul class="carousel__slides" data-slide-width>
+				<ul class="carousel__slider">
 				</ul>
-				<button class="carousel__prev"></button>
-				<button class="carousel__next"></button>
 			</div>
 			<script>loadGallery()</script>
 		</section>
