--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="build/styles.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
 	<script src="source\scripts.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 
 <body>
@@ -191,9 +191,12 @@
 		</section>
 
 		<section class="gallery-section" id="gallery">
-			<div class="gallery__carousel">
-				<ul class="carousel__slider">
-				</ul>
+			<div class="gallery__carousel swiper">
+				<div class="carousel__slider swiper-wrapper">
+				</div>
+				<div class="swiper-pagination"></div>
+				<div class="swiper-button-next"></div>
+				<div class="swiper-button-prev"></div>
 			</div>
 			<script>loadGallery()</script>
 		</section>
