Improved Nav Link Scrolling

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 			</ul>
 		</nav>
 	</header>
+	<script>loadHeader()</script>
 	<div id="side-bars__left" class="side-bars"></div>
 	<!-- Main Content -->
 	<main>
