--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
 					<div class="polaroid">
 						<span class="polaroid__hover-target"></span>
 						<div class="polaroid__photo">
-							<img src="assets\img\team-photo_temp.jpg" alt="Team Photo" onload="correctPolaroid(this)" />
+							<img src="assets/img/gallery/team-photo_temp copy 3.jpg" alt="Team Photo"
+								onload="correctPolaroid(this)" />
 						</div>
 						<div class="polaroid__caption">
 							<p>A photo of the team in Evesham</p>
