Updated Contact section text

--- a/index.html
+++ b/index.html
@@ -218,11 +218,10 @@
 		</section>
 		<section class="contact-section" id="contact">
 			<h2>Get In Touch</h2>
-			<p>There will be a form here</p>
-			<p>There will be a form here</p>
-			<p>There will be a form here</p>
-			<p>There will be a form here</p>
-			<p>There will be a form here</p>
+			<p>Contact Form Coming Soon...</p>
+			<p>In the meantime please either email us at <a href="mailto:foolsgamibtmorris@gmail.com"
+					type="email">foolsgambitmorris@gmail.com</a></p>
+			<p>or drop us a message on one of our social media accounts :)</p>
 		</section>
 	</main>
 	<div id="side-bars__right" class="side-bars"></div>
