--- a/index.html
+++ b/index.html
@@ -210,14 +210,14 @@
 			<div class="gallery__carousel swiper">
 				<div class="carousel__slider swiper-wrapper">
 				</div>
-				<div class="swiper-pagination"></div>
 				<div class="swiper-button-next"></div>
 				<div class="swiper-button-prev"></div>
+				<div class="swiper-pagination"></div>
 			</div>
 			<script>loadGallery()</script>
 		</section>
 		<section class="contact-section" id="contact">
-			<h2>Get In Touch</h2>
+			<h2 class="contact-section__title">Get In Touch</h2>
 			<p>Contact Form Coming Soon...</p>
 			<p>In the meantime please either email us at <a href="mailto:foolsgamibtmorris@gmail.com"
 					type="email">foolsgambitmorris@gmail.com</a></p>
