--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="build/styles.css" />
-	<script src="source\scripts.js"></script>
+	<script src="build\scripts.js"></script>
 
 </head>
 
