Email address fix

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 		<section class="contact-section" id="contact">
 			<h2 class="contact-section__title">Get In Touch</h2>
 			<p>Contact Form Coming Soon...</p>
-			<p>In the meantime please either email us at <a href="mailto:foolsgamibtmorris@gmail.com"
+			<p>In the meantime please either email us at <a href="mailto:foolsgambitmorris@gmail.com"
 					type="email">foolsgambitmorris@gmail.com</a></p>
 			<p>or drop us a message on one of our social media accounts :)</p>
 		</section>
